# CRISPR-spacer-based-Human-microbiome-transmission-analysis

./: .gitignore  .gitmodules  MAGs_minced_parsed_cas_real.tsv  README.md  TODO.md  ccf.environment.yml  environment.yml  environment_CRISPRDetect.yml  environment_CRISPRDetect2.4.yml  environment_CRISPRDetect3.yml  environment_metaCRAST.yml  environment_metaCRISPRDetect.yml  pyproject.toml  pyproject.toml.bak
CRISPRDetect_prova/: CRISPRDetect3_version.md  M1023330751.fna  M1023330751_NOdirection.CRISPRDetect3  M1023330751_cpu.CRISPRDetect3.fp  M1023330751_cpu.CRISPRDetect3.spacers.fa  M1023330751_cpu64_NOdirection.CRISPRDetect3.gff  M1023330751_cpu64_NOdirection_cas.CRISPRDetect3  M1023330751_cpu64_NOdirection_cas.CRISPRDetect3.fp  M1023330751_cpu64_direction_cas.CRISPRDetect3  M1023330751_cpu64_direction_cas.CRISPRDetect3.fp  M1023330751_cpu_NOdirection.CRISPRDetect3.fp  M1023330751_cpu_direction.CRISPRDetect3  M1023330751_crispr.txt  M1023330751_default.CRISPRDetect3.gff
M1856252453/: CRISPRIdentify.txt  M1856252453.CRISPRDetect3  M1856252453_1.pilercr  M1856252453_2.pilercr  M1856252453_cas.CRISPRDetect3  M1856252453_cas.CRISPRDetect3.CAS_DOMAIN.tab  M1856252453_default.minced  M1856252453_info.pilercr  M1856252453_paper.minced  tools.md  tools_differences.txt
MAGs_short_unzip/: M1975430591.fna
conda-recipe/: meta.yaml
presentation/: main.tex
samples/: CRISPRCasFinder.txt  CRISPRIdentify.txt  CRISPRIdentify_sample.txt  M1363633727.CRISPRDetect3  M1363633727.crisprDetect  M1363633727.crisprDetect.gff  M1363633727.crisprDetect.spacers.fa  M1363633727.fna  M1363633727.minced  M1363633727.pilercr  M1363633727_info.pilercr  M1363633727_noinfo.pilercr  tools_differences.txt
scripts/: _run_cctyper_new.py  bunzip2_dir.py  cas_distance.ipynb  cas_distance.py  crisprAll.sh  parse_CRISPRDetect3.py  parse_minced.py  (+15 more)
(+662 files in other folders)
